[gd_scene load_steps=4 format=2]

[ext_resource path="res://player/enemy_red.gd" type="Script" id=1]
[ext_resource path="res://Asend/boat/PNG/Default size/Ships/ship (3).png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 321.006

[node name="Ship_red" type="KinematicBody2D"]
rotation = -1.5708
script = ExtResource( 1 )
speed = 250
detect_radius = 350

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -178, -124 )
polygon = PoolVector2Array( 178, 69, 151, 92, 146, 125, 177, 178, 211, 125, 205, 91 )

[node name="gun_time" type="Timer" parent="."]

[node name="detect_Radius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detect_Radius"]
position = Vector2( -1, 1 )
shape = SubResource( 1 )

[connection signal="body_entered" from="detect_Radius" to="." method="_on_detect_Radius_body_entered"]
[connection signal="body_exited" from="detect_Radius" to="." method="_on_detect_Radius_body_exited"]
